# Open-Bar-Rust

./: .gitignore  .hyperlayout  Cargo.toml  README.md
client/: Cargo.toml
client/assets/models/: bar_V2.glb  table.glb
client/assets/models/alien/: alien.gltf
client/assets/models/barman/: barman.glb  barman_v2.glb  barman_v3.glb
client/src/: main.rs
client/src/ressources/: bar.rs  floor.rs  mod.rs  player.rs  sun.rs
client/src/ressources/models/grass/: grass.gltf
client/src/sounds/: audio_source.rs
client/src/systems/: constants.rs  mod.rs
client/src/systems/camera/: camera.rs
client/src/systems/inputs/: draw_cursor.rs  mod.rs  mouse_click_system.rs
client/src/systems/lights/: light.rs
client/src/systems/movements/: mod.rs  paddle_movements.rs  player_movements.rs
client/src/ui/: menu_button.rs  mod.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs
server/src/db/: redis_client.rs
server/src/models/: characters.rs
server/src/routes/: characters.rs  test.rs
src/: main.rs
src/routes/: mod.rs
